--- a/src/forms/package.json
+++ b/src/forms/package.json
@@ -9,7 +9,7 @@
     "directory": "src/forms"
   },
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./src/index.js",
   "type": "commonjs",
   "sideEffects": false,
@@ -18,8 +18,7 @@
     "@adeira/sx": "^0.29.1",
     "@adeira/sx-design": "^0.29.0",
     "@babel/runtime": "^7.18.6",
-    "fbt": "^1.0.0",
-    "recoil": "^0.7.4"
+    "fbt": "^1.0.0"
   },
   "devDependencies": {
     "@fbtjs/default-collection-transform": "^1.0.0",
