--- a/.github/workflows/continuous-integration-javascript.yml
+++ b/.github/workflows/continuous-integration-javascript.yml
@@ -34,16 +34,8 @@ jobs:
       - name: Install Yarn dependencies
         run: yarn install --immutable
 
-      # TODO: https://github.com/yarnpkg/berry/issues/2783
-      # - name: Check Yarn versions releases
-      #   run: yarn version check
-
-      # https://github.com/actions-rs/toolchain
-      - uses: actions-rs/toolchain@v1.0.7
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+      # https://github.com/dtolnay/rust-toolchain
+      - uses: dtolnay/rust-toolchain@stable
 
       # We are purposefully expecting zero warnings in the output to make sure flowtests are
       # working as expected (Flow returns warnings for unused suppression comments).
