SX Design Next.js: dissolve `Link` component

--- a/src/sx-design-wlcm/package.json
+++ b/src/sx-design-wlcm/package.json
@@ -19,6 +19,7 @@
   },
   "peerDependencies": {
     "@adeira/sx": "^0.29.1",
+    "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,7 +32,8 @@
     "@storybook/addon-viewport": "^6.5.9",
     "@storybook/addons": "^6.5.9",
     "@storybook/react": "^6.5.9",
-    "@storybook/theming": "^6.5.9"
+    "@storybook/theming": "^6.5.9",
+    "next": "^12.2.3"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006"
