--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -3,8 +3,7 @@ name: Playwright
 on: [push]
 
 jobs:
-  playwright-test:
-    name: Playwright test
+  test:
     strategy:
       matrix:
         repository:
