--- a/src/sx-design-wlcm/package.json
+++ b/src/sx-design-wlcm/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "sideEffects": false,
   "dependencies": {
+    "@adeira/forms": "^0.4.0",
     "@adeira/sx-design-headless": "^0.2.1",
     "@babel/runtime": "^7.20.6"
   },
