--- a/src/sx-design/package.json
+++ b/src/sx-design/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "sideEffects": false,
   "dependencies": {
+    "@adeira/forms": "^0.4.0",
     "@adeira/hooks": "^0.3.0",
     "@adeira/icons": "^2.1.1",
     "@adeira/js": "^2.1.1",
