--- a/src/abacus-kochka/package.json
+++ b/src/abacus-kochka/package.json
@@ -21,6 +21,7 @@
     "@adeira/relay": "^6.2.0",
     "@adeira/sx": "^0.29.1",
     "@adeira/sx-design": "^0.31.0",
+    "@sentry/nextjs": "^7.21.1",
     "babel-plugin-fbt": "^1.0.0",
     "babel-plugin-fbt-runtime": "^1.0.0",
     "fbt": "^1.0.0",
