--- a/.github/workflows/dockerfile-builder.yml
+++ b/.github/workflows/dockerfile-builder.yml
@@ -95,6 +95,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          secrets: |
+            SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
 
       - name: Image digest
         if: steps.changes.outputs.src == 'true'
