Renovate: automerge only dev dependencies

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -18,6 +18,7 @@
   ],
   packageRules: [
     {
+      matchDepTypes: ['devDependencies'],
       matchUpdateTypes: ['patch'],
       addLabels: ['automerge'],
     },
