--- a/.github/.kodiak.toml
+++ b/.github/.kodiak.toml
@@ -6,6 +6,7 @@ priority_merge_label = "automerge priority"
 require_automerge_label = true
 method = "rebase"
 delete_branch_on_merge = true
+prioritize_ready_to_merge = true
 
 # TODO: consider `approve.auto_approve_usernames` for Dependabot
 #  see: https://kodiakhq.com/docs/recipes#adding-pull-request-approvals-to-dependabot-pull-requests
