Flow: enable Local Type Inference (LTI)
This change requires additional type annotations which I mostly fixed using `$FlowFixMe` annotation (usual assumption: these errors are already there, let's suppress them and move let's move on).

See:

- https://github.com/facebook/flow/releases/tag/v0.197.0
- https://medium.com/flow-type/local-type-inference-for-flow-aaa65d071347

--- a/.flowconfig
+++ b/.flowconfig
@@ -50,7 +50,7 @@ untyped-import
 emoji=true
 exact_by_default=true
 include_warnings=true
-inference_mode=constrain_writes
+inference_mode=lti
 
 facebook.fbt=FbtWithoutString
 
