Abacus KO: remove shop categories and relevance

--- a/src/abacus-kochka/package.json
+++ b/src/abacus-kochka/package.json
@@ -33,8 +33,7 @@
     "next-seo": "^5.15.0",
     "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recoil": "^0.7.6"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@adeira/babel-preset-adeira": "^4.0.0",
