CI: run some workflows on `merge_group` and `pull_request`

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,14 @@
 name: Playwright
 
 on:
+  merge_group:
+    types:
+      - checks_requested
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
   push:
     branches-ignore:
       # We do not run tests on master as the changes were already tested when opening a PR,
