--- a/.github/workflows/weekly-rust-cargo-update.yml
+++ b/.github/workflows/weekly-rust-cargo-update.yml
@@ -7,7 +7,7 @@ on:
     - cron: '0 5 * * 1'
 
 jobs:
-  daily-cargo:
+  weekly-cargo:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -30,8 +30,8 @@ jobs:
         uses: peter-evans/create-pull-request@v4.2.3
         with:
           token: ${{ secrets.PAT }}
-          commit-message: 'Daily Rust Cargo update (${{ matrix.manifest }})'
-          title: 'Daily Rust Cargo update (${{ matrix.manifest }})'
+          commit-message: 'Weekly Rust Cargo update (${{ matrix.manifest }})'
+          title: 'Weekly Rust Cargo update (${{ matrix.manifest }})'
           delete-branch: true
           branch-suffix: random
           labels: |
