--- a/.github/workflows/continuous-integration-javascript.yml
+++ b/.github/workflows/continuous-integration-javascript.yml
@@ -52,7 +52,7 @@ jobs:
             yarn-cache-folder-
 
       # https://github.com/dtolnay/rust-toolchain
-      - uses: dtolnay/rust-toolchain@1.68.0
+      - uses: dtolnay/rust-toolchain@stable
 
       - name: Install Yarn dependencies
         run: ./x install -- --immutable
