--- a/src/icons/package.json
+++ b/src/icons/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@adeira/js": "^2.1.1",
     "@svgr/core": "^7.0.0",
+    "@svgr/plugin-jsx": "^7.0.0",
     "@svgr/plugin-svgo": "^7.0.0",
     "change-case": "^4.1.2",
     "prettier": "^2.8.7"
