--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,11 @@
 # https://git-scm.com/docs/gitignore#_pattern_format
 
+# Next.js build
 **/.next/static/css
+
+# React Native
 **/ios/Pods
+
+# Rust docs
+**/target/doc/**/*.css
+**/target/doc/**/*.md
