SX Design: patch `build-storybook` script
Annoyingly, there is currently an issue with Storybook (see: https://github.com/storybookjs/storybook/issues/16555). We already have to do this in CI to make Playwright work, and it also affects Vercel deployments (and builds on Node.js 18).

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -76,6 +76,7 @@ jobs:
         run: yarn workspace ${{ matrix.repository }} playwright test
         env:
           # See: https://github.com/storybookjs/storybook/issues/16555
+          # TODO: remove when no longer needed
           NODE_OPTIONS: --openssl-legacy-provider
 
       # https://github.com/actions/upload-artifact
