--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,5 +1,5 @@
 {
-  extends: [':ignoreModulesAndTests', 'group:monorepos', 'group:recommended', 'workarounds:all'],
+  extends: [':ignoreModulesAndTests', 'group:monorepos', 'group:recommended', 'replacements:all', 'workarounds:all'],
   prHourlyLimit: 0,
   prConcurrentLimit: 0,
   dependencyDashboard: true,
