CI: run JS tests on `macos-latest`
I suspect that one test is broken on macOS. This is just a test. DO NOT MERGE.

--- a/.github/workflows/continuous-integration-javascript.yml
+++ b/.github/workflows/continuous-integration-javascript.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   javascript-test:
     name: JavaScript test
-    runs-on: ubuntu-latest
+    runs-on: macos-13
 
     strategy:
       fail-fast: false
