Publish a new package `@adeira/shell-command` to NPM
This will be necessary in order to successfully publish Shipit (see: https://github.com/adeira/universe/pull/6109)

--- a/src/shell-command/package.json
+++ b/src/shell-command/package.json
@@ -1,8 +1,18 @@
 {
   "name": "@adeira/shell-command",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "description": "Friendly child process wrapper for Node.js",
+  "homepage": "https://github.com/adeira/shell-command",
+  "bugs": "https://github.com/adeira/universe/issues",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:adeira/universe.git",
+    "directory": "src/shell-command"
+  },
   "main": "./index.js",
-  "license": "UNLICENSED",
-  "private": true,
-  "type": "commonjs"
+  "license": "MIT",
+  "type": "commonjs",
+  "dependencies": {
+    "@babel/runtime": "^7.12.5"
+  }
 }
