CI: do not `fail-fast` for Rust

--- a/.github/workflows/weekly-rust-cargo-update.yml
+++ b/.github/workflows/weekly-rust-cargo-update.yml
@@ -10,6 +10,7 @@ jobs:
   weekly-cargo:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         manifest:
           - 'src/abacus/Cargo.toml'
