--- a/.github/workflows/continuous-integration-rust.yml
+++ b/.github/workflows/continuous-integration-rust.yml
@@ -17,7 +17,7 @@ jobs:
     name: Rust test
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         manifest:
           - 'src/abacus/Cargo.toml'
