--- a/src/abacus-docs/package.json
+++ b/src/abacus-docs/package.json
@@ -19,7 +19,6 @@
   "devDependencies": {
     "@babel/core": "^7.22.1",
     "@babel/preset-flow": "^7.21.4",
-    "@playwright/test": "^1.34.3",
-    "playwright": "^1.34.3"
+    "@playwright/test": "^1.34.3"
   }
 }
