Adeira tools: add missing dependency

--- a/src/abacus-tools/package.json
+++ b/src/abacus-tools/package.json
@@ -14,5 +14,8 @@
     "next-plugin-custom-babel-config": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@adeira/babel-preset-adeira": "^4.0.0"
   }
 }
