--- a/src/abacus-tools/package.json
+++ b/src/abacus-tools/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@adeira/babel-preset-adeira": "^4.0.0"
+    "@adeira/babel-preset-adeira": "^4.0.0",
+    "@babel/core": "^7.22.5"
   }
 }
