Abacus K8s: update K8s limits and ingress path

--- a/src/abacus-kubernetes/abacus/ingress.yaml
+++ b/src/abacus-kubernetes/abacus/ingress.yaml
@@ -63,7 +63,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: '/newtab'
+            path: '/'
             backend:
               service:
                 name: abacus-tools-service
