Publish Rossum DMv2 analyze

--- a/.github/workflows/continuous-integration-rust.yml
+++ b/.github/workflows/continuous-integration-rust.yml
@@ -21,6 +21,7 @@ jobs:
       matrix:
         manifest:
           - 'src/abacus/Cargo.toml'
+          - 'src/rossum-dmv2-analyze/Cargo.toml'
           - 'src/x/Cargo.toml'
 
     steps:
