Rossum SA ext: allow `rossum.app` domain

--- a/src/rossum-sa-extension/manifest.json
+++ b/src/rossum-sa-extension/manifest.json
@@ -12,7 +12,7 @@
   "content_scripts": [
     {
       "js": ["scripts/annotation-schema-ids.js", "scripts/dev-features-enabled.js"],
-      "matches": ["https://*.rossum.ai/*"]
+      "matches": ["https://*.rossum.ai/*", "https://*.rossum.app/*"]
     }
   ],
   "action": {
