CI: fix Rust pipeline

--- a/.github/workflows/continuous-integration-rust.yml
+++ b/.github/workflows/continuous-integration-rust.yml
@@ -35,6 +35,7 @@ jobs:
           filters: |
             src:
               - 'src/abacus/**'
+              - 'src/rossum-dmv2-analyze/**'
               - 'src/x/**'
 
       # https://github.com/dtolnay/rust-toolchain
