--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "hermes-eslint": "^0.15.1",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
+    "prettier-plugin-hermes-parser": "^0.15.1",
     "typescript": "^5.1.6"
   },
   "packageManager": "yarn@3.6.1"
