--- a/src/rossum-sa-extension/manifest.json
+++ b/src/rossum-sa-extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Rossum SA extension",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Adds additional functionality to Rossum UI for developers (SA).",
   "icons": {
     "16": "icons/16-crunch.png",
@@ -11,7 +11,11 @@
   "permissions": ["storage"],
   "content_scripts": [
     {
-      "js": ["scripts/annotation-schema-ids.js", "scripts/dev-features-enabled.js"],
+      "js": [
+        "scripts/annotation-schema-ids.js",
+        "scripts/dev-features-enabled.js",
+        "scripts/style-improvements.js"
+      ],
       "matches": ["https://*.rossum.ai/*", "https://*.rossum.app/*"]
     }
   ],
