Abacus tools: init Playwright tests

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,6 +25,7 @@ jobs:
           - '@adeira/abacus-backoffice'
           - '@adeira/abacus-docs'
           - '@adeira/abacus-kochka'
+          - '@adeira/abacus-tools'
           - '@adeira/sx-design'
           - '@adeira/typescript-test'
           - 'mrtnzlml-meta'
@@ -41,6 +42,10 @@ jobs:
             source: 'src/abacus-kochka/**'
             playwrightReportName: 'playwright-report-abacus-kochka'
             playwrightReportPath: 'src/abacus-kochka/playwright/test-results/'
+          - repository: '@adeira/abacus-tools'
+            source: 'src/abacus-tools/**'
+            playwrightReportName: 'playwright-report-abacus-tools'
+            playwrightReportPath: 'src/abacus-tools/playwright/test-results/'
           - repository: '@adeira/sx-design'
             source: 'src/sx-design/**'
             playwrightReportName: 'playwright-report-sx-design'
