--- a/src/abacus-tools/package.json
+++ b/src/abacus-tools/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@adeira/babel-preset-adeira": "^4.0.0",
-    "@babel/core": "^7.22.8"
+    "@babel/core": "^7.22.8",
+    "@playwright/test": "^1.36.0"
   }
 }
