--- a/src/rossum-dmv2-analyze/Cargo.toml
+++ b/src/rossum-dmv2-analyze/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2021"
 anyhow = { version = "1.0.72" }
 clap = { version = "4.3.16", default-features = false, features = ["std", "cargo", "color", "deprecated", "env", "error-context", "help", "suggestions", "unicode", "usage"] }
 colored = { version = "2.0.4" }
+csv = { version = "1.2.2" }
 indicatif = { version = "0.17.5" }
 reqwest = { version = "0.11.18", features = ["json"] }
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = { version = "1.0.103" }
+tempfile = { version = "3.6.0" }
 tokio = { version = "1.29.1", features = ["full"] }
