CI: add Node.js version 21

--- a/.github/workflows/continuous-integration-javascript.yml
+++ b/.github/workflows/continuous-integration-javascript.yml
@@ -28,7 +28,7 @@ jobs:
         # We support only Node.js versions with "LTS" and "Current" status.
         # See: https://nodejs.dev/en/about/releases/
         # See: https://github.com/nodejs/Release
-        node-version: [18.x, 20.x]
+        node-version: [18.x, 20.x, 21.x]
 
     steps:
       # https://github.com/actions/checkout
