--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@adeira/monorepo-utils": "^0.12.0",
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.3",
+    "@yarnpkg/types": "^4.0.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "eslint": "^8.53.0",
